mb ready, problem with schedule
